--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail Tag in HTML5</title>
+    <title>Dharmraj</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fontawesome.com/icons/badge-check?style=light">
 </head> 
