--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail Tag in HTML5</title>
     <title>Dharmraj</title>
+    <title>Vipul</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fontawesome.com/icons/badge-check?style=light">
 </head> 
